# nixops-hetzner

./: .gitignore  .mypy.ini  README.md  coverage-tests.py  default.nix  overlays.nix  overrides.nix  pyproject.toml  release.nix  setup.cfg  setup.py  shell.nix
.github/workflows/: ci.yml  test.yml
nix/: hetzner.nix
nixops_hetzner/: hetzner_utils.py  plugin.py
nixops_hetzner/backends/: options.py  server.py
nixops_hetzner/nix/: default.nix  hetzner-bootstrap.nix
nixopshetzner/: plugin.py
nixopshetzner/backends/: server.py
