[tool.poetry]
name = "nixops_hetzner"
version = "1.0"
description = "NixOS deployment tool, but for hetzner"
authors = ["NixOS contributors"]
license = "MIT"
include = [ "nixops_hetzner/nix/*.nix" ]

[tool.poetry.dependencies]
python = "^3.7"
nixops = { git = "https://github.com/NixOS/nixops.git", rev = "master" }
nixos-modules-contrib = { git = "https://github.com/nix-community/nixos-modules-contrib.git", rev = "master" }
hetzner = "0.8.3"
typing-extensions = "^3.7.4"

[tool.poetry.dev-dependencies]
nose = "^1.3.7"
mypy = "^0.812"
black = "^21.5b1"

[tool.poetry.plugins."nixops"]
hetzner = "nixops_hetzner.plugin"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
